Quase finalizando o jogo

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </section>
             <section id="finalizados">
                 <section id="AreaFinal">
-                    <section id="espada"class='final'></section>
-                    <section id="copas"class='final'></section>
-                    <section id="paus"class='final'></section>
-                    <section id="ouro"class='final'></section>
+                    <section id="espada" class='final'></section>
+                    <section id="copas" class='final'></section>
+                    <section id="paus" class='final'></section>
+                    <section id="ouros" class='final'></section>
                 </section>
             </section>
         </section>
