Possivelmente finalizando  o projeto

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <section id="copas" class='final'></section>
                     <section id="paus" class='final'></section>
                     <section id="ouros" class='final'></section>
+                    <div id="texto"><p>Área final</p></div>
                 </section>
             </section>
         </section>
