Adicionando a opção de cancelar

--- a/index.html
+++ b/index.html
@@ -30,13 +30,18 @@
         </section>
         <div id="blur">
             <div id="blur_buttons">
-                <button id="1coluna_button" class="botao_escolha" onclick="escolha('1')">1ª coluna</button>
-                <button id="2coluna_button" class="botao_escolha" onclick="escolha('2')">2ª coluna</button>
-                <button id="3coluna_button" class="botao_escolha" onclick="escolha('3')">3ª coluna</button>
-                <button id="4coluna_button" class="botao_escolha" onclick="escolha('4')">4ª coluna</button>
-                <button id="5coluna_button" class="botao_escolha" onclick="escolha('5')">5ª coluna</button>
-                <button id="6coluna_button" class="botao_escolha" onclick="escolha('6')">6ª coluna</button>
-                <button id="areafinal_button" class="botao_escolha" onclick="escolha('7')">Área final</button>
+                <div id="botoes">
+                    <button id="1coluna_button" class="botao_escolha" onclick="escolha('1')">1ª coluna</button>
+                    <button id="2coluna_button" class="botao_escolha" onclick="escolha('2')">2ª coluna</button>
+                    <button id="3coluna_button" class="botao_escolha" onclick="escolha('3')">3ª coluna</button>
+                    <button id="4coluna_button" class="botao_escolha" onclick="escolha('4')">4ª coluna</button>
+                    <button id="5coluna_button" class="botao_escolha" onclick="escolha('5')">5ª coluna</button>
+                    <button id="6coluna_button" class="botao_escolha" onclick="escolha('6')">6ª coluna</button>
+                    <button id="areafinal_button" class="botao_escolha" onclick="escolha('7')">Área final</button>
+                </div>
+                <div id="cancelar">
+                    <button onclick="cancelar()">Cancelar</button>
+                </div>
             </div>
         </div>
     </main>
