Finalizando projeto e resolvendo todos os bugs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <section class="cartas areaPesca">
                     <button onclick="pescar()" id="btnPescar">Pescar</button>
                 </section>
-                <button id="botao" onclick="devolver()">De novo</button>
+                <button id="botao" onclick="devolver()">Devolver cartas</button>
             </section>
             <section id="finalizados">
                 <section id="AreaFinal">
