Fazendo um pouco

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
     </main>
-    <script src="code.js"></script>
+    <script src="code.js" type="module"></script>
     <!-- 
         Feito por Tiago Citrangulo da Silva em julho de 2023
         Email para contato: tiagocitrangulo256@gmail.com
