Agora está funcionando

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Paciencia</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/icon.jpg" type="image/x-icon">
+
+    <script src="js/Carta.js" defer></script>
+    <script src="js/Coluna.js" defer></script>
+    <script src="code.js" defer></script>
 </head>
 <body>
     <main>
@@ -45,7 +49,6 @@
             </div>
         </div>
     </main>
-    <script src="code.js" type="module"></script>
     <!-- 
         Feito por Tiago Citrangulo da Silva em julho de 2023
         Email para contato: tiagocitrangulo256@gmail.com
