Fazendo mover e mostrar a pesca
Fiz funcionar o movimento entre colunas na mesa central, e também fiz mostrar as cartas ao clicar no botão pescar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <script src="js/Carta.js" defer></script>
     <script src="js/Coluna.js" defer></script>
+    <script src="js/AreaPesca.js" defer></script>
     <script src="code.js" defer></script>
 </head>
 <body>
