Fazendo o Drag and Drop

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id="mesa">
             <section id="container"></section>
         </section>
-        <div id="blur">
+        <!-- <div id="blur">
             <div id="blur_buttons">
                 <div id="botoes">
                     <button id="1coluna_button" class="botao_escolha" onclick="escolha('1')">1ª coluna</button>
@@ -43,7 +43,7 @@
                     <button onclick="cancelar()">Cancelar</button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
     <script src="code.js"></script>
     <!-- 
